--- a/Publish_1/index.html
+++ b/Publish_1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="/eapp/">    <title>Swathi Constructions</title>
+    <base href="/" />
+    <title>Swathi Constructions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- bootstrap css -->
@@ -13,7 +14,7 @@
         a { cursor: pointer }
         
     </style>
-<link rel="stylesheet" href="styles.7207c1bbf59565f44371.css"></head>
+<link rel="stylesheet" href="styles.6528e9562c759df05522.css"></head>
 <body>
     <app>Loading...</app>
 
@@ -21,6 +22,6 @@
 <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script> -->
 <script src="./assets/jquery-3.2.1.slim.min.js"></script>
 <script src="./assets/bootstrap.min.js"></script>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.fb102f8799c272a4b157.js"></script><script type="text/javascript" src="main.c3ced58cc7dce2884075.js"></script></body>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.fb102f8799c272a4b157.js"></script><script type="text/javascript" src="main.f0595b9b24e598160a88.js"></script></body>
 
 </html>
